@@ -128,9 +128,9 @@ extern "C" {
 
 #define DEFAULT_HTTP_PORT	80
 #define DEFAULT_HTTPS_PORT	443
-#define is_default_port(port,r)	((port) == default_port(r))
-#define http_method(r)	"http"
-#define	default_port(r)	DEFAULT_HTTP_PORT
+#define ap_is_default_port(port,r)	((port) == ap_default_port(r))
+#define ap_http_method(r)	"http"
+#define ap_default_port(r)	DEFAULT_HTTP_PORT
 
 /* --------- Default user name and group name running standalone ---------- */
 /* --- These may be specified as numbers by placing a # before a number --- */
