@@ -146,9 +146,9 @@ static int proxy_detect(request_rec *r)
     if (conf->req && r->parsed_uri.scheme) {
 	/* but it might be something vhosted */
        if (!(r->parsed_uri.hostname
-	    && !strcasecmp(r->parsed_uri.scheme, http_method(r))
+	    && !strcasecmp(r->parsed_uri.scheme, ap_http_method(r))
 	    && ap_matches_request_vhost(r, r->parsed_uri.hostname,
-               r->parsed_uri.port_str ? r->parsed_uri.port : default_port(r)))) {
+               r->parsed_uri.port_str ? r->parsed_uri.port : ap_default_port(r)))) {
 	    r->proxyreq = 1;
 	    r->uri = r->unparsed_uri;
 	    r->filename = ap_pstrcat(r->pool, "proxy:", r->uri, NULL);
